fix(projectModal): task section collapsing when clicked on task item

--- a/src/components/modals/projectModal.css
+++ b/src/components/modals/projectModal.css
@@ -16,8 +16,6 @@
   .task-section {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
-    padding: 0.5rem 0.25rem;
     border: 1px solid hsl(var(--bg-primary-500));
     border-radius: 0.5rem;
     
@@ -27,15 +25,22 @@
     .task-list {
       visibility: hidden;
       height: 0;
+      margin-left: 0.25rem;
+      margin-top: 0;
       opacity: 0;
       overflow-y: hidden;
-      transition: height .3s ease-in, opacity 0.3s ease, visibility 0.5s;
+      transition: 
+        height .3s ease-in, 
+        opacity 0.3s ease, 
+        margin-top 0.3s ease-in-out, 
+        visibility 0.5s;
     }
   }
   .task-section.expanded {
     .task-list {
       visibility: visible;
       height: fit-content;
+      margin-top: 0.25rem;
       opacity: 1;
     }
     h3 + svg {
@@ -45,6 +50,7 @@
   .task-section--header {
     display: flex;
     align-items: center;
+    padding: 0.75rem 0.25rem;
     cursor: pointer;
     h3 {
       font-weight: var(--fw-normal);
